--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -79,7 +79,7 @@
             <option base_url="intergeo37.bayernwolke.de/betty/c_hist/" ending="" detail_switch_level="14">Historisch bayern</option>
             <option base_url="intergeo36.bayernwolke.de/betty/c_dgm_relief/" ending="" detail_switch_level="14">Gelände relief</option>
         </select>
-        <input id="enable_tile_update" type="checkbox" checked onchange="draw_scene();">
+        <input id="enable_tile_update" type="checkbox" checked onchange="draw_requested = true;">
         <label for="enable_tile_update">Karten tiles nachladen</label>
         <input id="triangle_resolution" type="number" min="10" max="1000" value="400">
         <label for="triangle_resolution">Geometrieauflösung</label>
@@ -87,7 +87,7 @@
         <label for="enable_cam_follow">Kamera folgen</label>
         <input id="enable_fpv_cam" type="checkbox">
         <label for="enable_fpv_cam">Erste person navigation</label>
-        <input id="camera_interpolation" type="range" min="0" max="1" value="0" step=".01" oninput="draw_scene();">
+        <input id="camera_interpolation" type="range" min="0" max="1" value="0" step=".01" oninput="draw_requested = true;">
         <label for="camera_interpolation">Projektion(3D.o.2D)</label>
         <input id="enable_parcell_map" onchange="camera_updated=true;" type="checkbox">
         <label for="enable_parcell_map">Parzellkarte anzeigen</label>
@@ -262,7 +262,7 @@
         else {
             camera_center.add(map_drag_start.subtract(camera_center).mul(cam_dir_speed * 20000 * -e.deltaY));
         }
-        draw_scene();
+        camera_updated = true;
     });
     let pressed_keys = {};
     window.addEventListener("keydown", async (e) => {
@@ -512,8 +512,17 @@
             gl_context.deleteSync(rendering_fences[i]);
         rendering_fences = [rendering_fences[rendering_fences.length - 1]];
         await clientWaitAsync(gl_context, rendering_fences[0]);
+        if (tile_download_data.byteLength != indices_render_objs.width * indices_render_objs.height * 4) {
+            console.log(`Tile bytes: ${tile_download_data.byteLength} vs buffer size ${indices_render_objs.width * indices_render_objs.height * 4}`);
+            tile_processing_running = false;
+            last_processed_frame -= 1;
+            return;
+        }
         gl_context.bindBuffer(gl_context.PIXEL_PACK_BUFFER, tile_download_buffer);
         gl_context.getBufferSubData(gl_context.PIXEL_PACK_BUFFER, 0, tile_download_data);
+
+        gl_context.bindBuffer(gl_context.PIXEL_PACK_BUFFER, depth_download_buffer);
+        gl_context.getBufferSubData(gl_context.PIXEL_PACK_BUFFER, 0, depth_download_data);
 
         console.log(`only reading the pixels took ${performance.now() - start} milli`);
 
@@ -523,7 +532,7 @@
         needed_tiles.delete(0xffffffff);
         console.log(`checking tiles took ${performance.now() - start} milli`);
         let decoded_tiles = Util.int32_to_tile_id(needed_tiles);
-        decoded_tiles = decoded_tiles.filter(e => !isNaN(e.x) && !isNaN(e.y)).map(e  => {; let tile = {
+        decoded_tiles = decoded_tiles.map(e  => {; let tile = {
                 level: e.level,
                 x: (e.level >= 11 ? e.x + last_detail_corner.x * (1 << e.level) : e.x),
                 y: (e.level >= 11 ? e.y + last_detail_corner.y * (1 << e.level) : e.y)
@@ -533,7 +542,7 @@
             tile.y %= max;
             return tile;
         }
-        );
+        ).filter(e => !isNaN(e.x) && !isNaN(e.y));
         Util.add_missing_parent_tiles(decoded_tiles);
         // max level for height is tile 15 
         const tile_on_minifuzi = (tile) => {return heightmap_meta_data && heightmap_meta_data.tiles_set && heightmap_meta_data.tiles_set.has(`${tile.level}/${tile.x}/${tile.y}`);}
@@ -570,8 +579,6 @@
         }
         console.log(decoded_tiles);
         
-        gl_context.bindBuffer(gl_context.PIXEL_PACK_BUFFER, depth_download_buffer);
-        gl_context.getBufferSubData(gl_context.PIXEL_PACK_BUFFER, 0, depth_download_data);
         console.log(`Full tile update took ${performance.now() - tile_processing_start} milli`);
         tile_processing_running = false;
     }
@@ -845,7 +852,7 @@
         const w_overlay = 1 << 19;
         virtual_overlay_map = VirtualMap().init(w_overlay, w_overlay, {x: c[0], y: c[1]}, 256, 256, 255, TextureTypes(gl_context).un8rgba, gl_context);
         // starting the endless loop for updating the image cache
-        setInterval(draw_scene, 16); // go for 60 fps
+        setInterval(draw_scene, 10); // go for 60 fps
         setInterval(() => check_virtual_textures_update("height", virtual_height_map), 20);
         setInterval(() => check_virtual_textures_update("streetmap", virtual_street_map), 20);
         setInterval(() => check_virtual_textures_update("overlay", virtual_overlay_map), 20);
@@ -1026,9 +1033,9 @@
                 if (download_sync)
                     gl.deleteSync(download_sync);              
                 const needed_bytes = fb.width * fb.height * 4;
-                if (!tile_download_data || tile_download_data.byteLength < needed_bytes)
+                if (!tile_download_data || tile_download_data.byteLength != needed_bytes)
                     tile_download_data = new Uint8Array(needed_bytes);
-                if (!depth_download_data || depth_download_data.byteLength < needed_bytes) {
+                if (!depth_download_data || depth_download_data.byteLength != needed_bytes) {
                     depth_download_data = new Uint8Array(needed_bytes);
                     depth_data_f32 = new Float32Array(depth_download_data.buffer);
                 }
@@ -1054,7 +1061,7 @@
         let height = String(document.documentElement.clientHeight - document.getElementById("header").clientHeight) + "px";
         canvas3d.style.height = height;
         resizeCanvasToDisplaySize(canvas3d, indices_render_objs, gl_context);
-        await draw_scene();
+        draw_requested = true;
     });
 </script>
 
