--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -91,6 +91,8 @@
         <label for="camera_interpolation">Projektion(3D.o.2D)</label>
         <input id="enable_parcell_map" onchange="camera_updated=true;" type="checkbox">
         <label for="enable_parcell_map">Parzellkarte anzeigen</label>
+        <input id="enable_street_name_overlay" onchange="draw_requested = true;" type="checkbox">
+        <label for="enable_street_name_overlay">Straßen anzeigen</label>
         <button type="button" onclick="request_full_screen();">Vollbild</button>
         {{/editor}}
     </div>
@@ -377,7 +379,7 @@
                 gl.uniform1i(program.uniform_locations.virtual_overlaymap, 8);
                 gl.uniformBlockBinding(program.program, program.uniform_locations.virtual_overlaymap_infos, program.uniform_locations.virtual_overlaymap_infos);
             }
-            if (document.getElementById("enable_parcell_map").checked) {
+            if (document.getElementById("enable_parcell_map").checked || docuemnt.getElementById("enable_street_name_overlay").checked) {
                 gl.uniform1i(program.uniform_locations.parcell_map_enabled, 1);
             } else {
                 gl.uniform1i(program.uniform_locations.parcell_map_enabled, 0);
@@ -571,10 +573,19 @@
                                            : `https://${layer.getAttribute("base_url")}${tile.level}/${tile.y}/${tile.x}${layer.getAttribute("ending") || ""}`,
         )).filter(e => e.level <= layer.getAttribute("detail_switch_level"));
         virtual_street_map.update_needed_tiles(requested_streetmap_tiles, {x: camera_center.x(), y: camera_center.y()});
-        if (document.getElementById("enable_parcell_map").checked) {
-            let requested_parcell_tiles = decoded_tiles.map(tile => TileRequest().init(tile.x, tile.y, tile.level,
-                `https://intergeo35.bayernwolke.de/betty/c_g_atkishybrid_alkisinvers_parzellar/${tile.level}/${tile.x}/${tile.y}`
-            )).filter(e => e.level <= 19 && e.level >= 15);
+        if (document.getElementById("enable_parcell_map").checked || document.getElementById("enable_street_name_overlay").checked) {
+            let requested_parcell_tiles = decoded_tiles.map(tile => {
+                let parcell = TileRequest().init(tile.x, tile.y, tile.level,
+                `https://intergeo35.bayernwolke.de/betty/c_g_atkishybrid_alkisinvers_parzellar/${tile.level}/${tile.x}/${tile.y}`);
+                let names = TileRequest().init(tile.x, tile.y, tile.level,
+                `https://intergeo33.bayernwolke.de/betty/g_atkishybrid_webp/${tile.level}/${tile.x}/${tile.y}`);
+                let ret = [];
+                if (document.getElementById("enable_parcell_map").checked)
+                    ret.push(parcell);
+                if (document.getElementById("enable_street_name_overlay").checked)
+                    ret.push(names);
+                return ret;
+            }).filter(e => e.level <= 19 && e.level >= 15);
             virtual_overlay_map.update_needed_tiles(requested_parcell_tiles, {x: camera_center.x(), y: camera_center.y()});
         }
         console.log(decoded_tiles);
