--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -180,16 +180,11 @@
             line-height: 1.3;
         }
 
-        .katex-html {
-            display: none;
-        }
         .katex-display {
+            width:90%;
             display: inline-block;
             font-size: unset;
             margin: 0;
-        }
-        .katex-display > .katex > .katex-html > .tag {
-            right: auto;
         }
         
         .log_line:nth-child(even) {
