--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -9,28 +9,24 @@
     <title>Md Editor</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css" integrity="sha384-zh0CIslj+VczCZtlzBcjt5ppRcsAmDnRem7ESsYwWwg3m/OaJ2l4x7YBZl9Kxxib" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@latest/build/styles/atom-one-light.min.css">
+    <link rel="stylesheet" href="/md_default.css">
     <style>
-        html * {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        body {
-            width: auto;
-        }
-
-        a {
-            cursor: pointer;
-        }
-
-        button {
-            border: none;
-            background-color: white;
-            cursor: pointer;
-        }
-
         textarea {
             font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
             resize: horizontal;
+        }
+
+        {{#editor}}
+        body {
+            max-width: 100%;
+            width: auto;
+        }
+        {{/editor}}
+
+        #save {
+            border: none;
+            background-color: white;
+            cursor: pointer;
         }
 
         #content {
@@ -68,140 +64,18 @@
             font-weight: bold;
         }
 
-        h1 {
-            font-size: 250%
-        }
-
-        h2 {
-            font-size: 200%;
-        }
-
-        h3 {
-            font-size: 150%;
-        }
-
-        hr {
-            margin: 1em 0;
-            border: 0;
-            border-bottom: 1px solid #ccc;
-        }
-
-        blockquote {
-            margin-left: 0;
-            padding: 0.5em 0 0.5em 2em;
-            border-left: 3px solid rgb(211, 218, 234);
-        }
-
-        li,
-        code {
-            margin: 0.4em 0;
-        }
-
-        p {
-            margin: 0.9em 0;
-        }
-
-        code {
-            background: rgba(186, 193, 208, 0.412);
-            font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
-        }
-
-        img {
-            width: 80%;
-        }
-
-        pre>code {
-            display: block;
-            overflow-x: scroll;
-            border-radius: 5px;
-            padding: 0.5em 2em;
-        }
-
-        table {
-            border-spacing: 0;
-            border-collapse: collapse;
-        }
-
-        td {
-            padding: 4px 8px;
-        }
-
-        tr:nth-child(2n) {
-            background: #f3f3f3;
-        }
-
-        th {
-            border-bottom: 1px solid #aaa;
-        }
-
-        ol.decimal {
-            counter-reset: list_counter;
-            padding-left: 32px;
-        }
-
-        ol li.decimal{
-            counter-increment: list_counter;
-        }
-
-        ol li.decimal::marker{
-            content: counters(list_counter, '.') ' ';
-            /* Whatever custom styles you want here */
-            font-weight: bold;
-        }
-
-        .plain,
-        .markdown {
-            position: absolute;
-            width: 50%;
-            height: 100%;
-            margin: 0;
-        }
-        
         {{^editor}}
         .editor {
             display: none;
         }
         {{/editor}}
 
-        .plain {
-            border: 0;
-            border-right: 1px solid #000;
-            padding: 12px;
-            font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
-            font-size: 12px;
-            resize: none;
-        }
-
-        .markdown {
-            left: 50%;
-            padding: 0 0 0 12px;
-            overflow: auto;
-            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-            font-size: 14px;
-            line-height: 1.3;
-        }
-
-        .katex-display {
-            display: inline-block;
-            font-size: unset;
-            margin: 0;
-        }
-
-        .katex-display > .katex > .katex-html > .tag {
-            right: unset;
-        }
-        
-        code > span,
-        code > span > span{
-            font-family: unset
-        }
-        
         .log_line:nth-child(even) {
             background-color: lightgrey;
         }
     </style>
     <!--<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>-->
-    <script type="text/javascript" src="{{&site_url}}/drawdown.js"></script>
+    <script type="text/javascript" src="/drawdown.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.js" integrity="sha384-Rma6DA2IPUwhNxmrB/7S3Tno0YY7sFu9WSYMCuulLhIqYSGZ2gKCJWIqhBWqMQfh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/contrib/auto-render.min.js" integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@latest/build/highlight.min.js"></script>
@@ -213,6 +87,7 @@
     <div id="header">
         <center id="title">Markdown Editor</center>
         <button id="save" onclick="save();">&#128190;</button>
+        <button id="d_html" onclick="download_html();">Html Herunterladen</button>
     </div>
     {{/editor}}
     <div id="content">
@@ -228,6 +103,47 @@
 </body>
 <script>
     const file_path = "{{&file_path}}";
+
+    async function download_html() {
+        let project_name = file_path.replace(/.*\//, '').replace(/\..*/, '');
+        let file_name = project_name + ".html";
+
+        let css = await fetch("/md_default.css");
+        css = await css.text();
+
+        let page = `
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>${project_name}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css" integrity="sha384-zh0CIslj+VczCZtlzBcjt5ppRcsAmDnRem7ESsYwWwg3m/OaJ2l4x7YBZl9Kxxib" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@latest/build/styles/atom-one-light.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.js" integrity="sha384-Rma6DA2IPUwhNxmrB/7S3Tno0YY7sFu9WSYMCuulLhIqYSGZ2gKCJWIqhBWqMQfh" crossorigin="anonymous"><\/script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/contrib/auto-render.min.js" integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh" crossorigin="anonymous"><\/script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@latest/build/highlight.min.js"><\/script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@latest/dist/mermaid.esm.min.mjs"> <\/script>
+    <style>
+    ${css}
+    </style>
+</head>
+<body>
+${document.getElementById("preview").innerHTML}
+</body>
+</html>
+`;
+        var element = document.createElement('a');
+        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(page));
+        element.setAttribute('download', file_name);
+
+        element.style.display = 'none';
+        document.body.appendChild(element);
+
+        element.click();
+
+        document.body.removeChild(element);
+    }
 
     function reattach_script(script_node) {
         let new_script_node = document.createElement("script");
