Started to implement versioning via git for files

--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -103,6 +103,7 @@
 </body>
 <script>
     const file_path = "{{&file_path}}";
+    var file_revision = "{{&file_revision}}";
 
     async function download_html() {
         let project_name = file_path.replace(/.*\//, '').replace(/\..*/, '');
