Only missing automatic version check in editor

--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -112,6 +112,7 @@
     // spector.spyCanvases();
 
     const file_path = "{{&file_path}}";
+    var file_revision = "{{&file_revision}}";
 
     let canvas3d = document.getElementById("canvas3d");
     let canvas_tile_ids_2d_ctx = null;
