--- a/templates/editors/invoice.html
+++ b/templates/editors/invoice.html
@@ -316,6 +316,7 @@
     const file_path = "{{&file_path}}";
     
     let file_data = {{&file_data}};
+    var file_revision = "{{&file_revision}}";
     let prev_data = structuredClone(file_data);
     /**
      * Structure of file data:
