--- a/templates/editors/tbl.html
+++ b/templates/editors/tbl.html
@@ -276,6 +276,7 @@
 <script>
     const a_code = "A".charCodeAt(0);
     const file_path = '{{&file_path}}';
+    var file_revision = "{{&file_revision}}";
     const ballot_box = "&#9744;";
     const ballot_box_checked = "&#9745;";
 
