--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <style>
+  <head>
+    <meta charset="utf-8">
+    <style>
     html * {
       font-family: Arial, Helvetica, sans-serif;
       font-size: min(7vw, 1cm);
@@ -29,10 +29,10 @@
       background-color: #04AA6D;
       color: white;
       padding: 14px 20px;
-      margin: 8px 0;
+      margin: 5%;
       border: none;
       cursor: pointer;
-      width: 100%;
+      width: 90%;
     }
 
     button:hover {
@@ -48,62 +48,27 @@
     .errors {
       color: red;
     }
-  </style>
+    </style>
+  </head>
 
-  <script type="text/javascript" src="sha256.js"></script>
-</head>
-
-<body>
-  <h1>Wilkommen auf Lacheis web server</h1>
-  <div class="container">
-    <div id="errors" class="errors">
-
+  <body>
+    <h1>Wilkommen auf Lacheis minifuziserver</h1>
+    <div class="container">
+      <label for="username">Benutzername</label><input id="username" type="text">
+      <label for="password">Passwort</label><input id="password" type="password">
+        <button onclick="login();">Anmelden</button>
     </div>
-    <form id="login_form" method="post" action="/overview">
-      <label for="uname"><b>Benutzername</b></label>
-      <input id="uname" type="text" placeholder="Benutzernamen" name="uname" required>
-
-      <label for="password"><b>Passwort</b></label>
-      <input id="password" type="password" placeholder="Passwort" name="psw" required>
-
-      <button type="submit">Login</button>
-    </form>
-  </div>
-</body>
-
-<script>
-  let errors;
-  let username;
-  let password;
-  window.onload = function () {
-    if (window.location.pathname != "/")
-      window.location = window.origin;
-    errors = document.getElementById("errors");
-    username = document.getElementById("uname");
-    password = document.getElementById("password");
-    document.getElementById("login_form").addEventListener("submit", (e) => {e.preventDefault(); login();});
-  };
-
-  const login = function () {
-    // first get salt
-    fetch(window.location.pathname + "get_salt/" + username.value).then(response => {
-      response.text().then(text => {
-        if (text.length === 0)
-          errors.innerHTML = "Benutzer ist nicht bekannt. Vertippt?";
-        else {
-          errors.innerHTML = "";
-          console.log(text);
-          let sha = sha256(password.value + text);
-          password.value = sha;
-          console.log(sha);
-          //window.location = window.location.pathname + "overview?credentials=" + username.value + ":" + sha;
-          document.getElementById("login_form").submit();
-          password.value = "";
-        }
-      })
-    });
-  };
-
-</script>
-
+  </body>
+  <script>
+  async function login() {
+    let u = document.getElementById("username").value;
+    let p = document.getElementById("password").value;
+    const encoder = new TextEncoder();
+    let hash = await window.crypto.subtle.digest("SHA-256", encoder.encode(`${u}:user@minifuziserver.duckdns.org:${p}`));
+    hash = new Uint8Array(hash).toHex();
+    let v = await fetch("login", {headers:{login:`${u}:${hash}`}});
+    if (v.ok)
+      window.location.href = window.location.origin + '/overview';
+  }
+  </script>
 </html>
